<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.sharknoon</groupId>
    <artifactId>Casey</artifactId>
    <version>1.3</version>

    <packaging>pom</packaging>

    <properties>
        <mainClass>${mainIDEClass}</mainClass>
        <mainCOMPILERClass>sharknoon.casey.compiler.Main</mainCOMPILERClass>
        <mainIDEClass>sharknoon.casey.ide.MainApplication</mainIDEClass>
        <mainUPDATERClass>sharknoon.casey.updater.Main</mainUPDATERClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>10</maven.compiler.source>
        <maven.compiler.target>10</maven.compiler.target>
    </properties>

    <modules>
        <module>CaseyCOMPILER</module>
        <module>CaseyIDE</module>
        <module>CaseyUPDATER</module>
    </modules>

    <organization>
        <name>Shark Industries</name>
        <url>https://www.sharknoon.de/</url>
    </organization>

    <pluginRepositories>
        <pluginRepository>
            <id>oss-sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <!-- For building jars -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
            <!--&lt;!&ndash; for running the Project &ndash;&gt;-->
            <!--<plugin>-->
            <!--<groupId>org.codehaus.mojo</groupId>-->
            <!--<artifactId>exec-maven-plugin</artifactId>-->
            <!--<version>1.6.0</version>-->
            <!--<configuration>-->
            <!--<mainClass>${mainClass}</mainClass>-->
            <!--</configuration>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<id>package-native</id>-->
            <!--<phase>package</phase>-->
            <!--<goals>-->
            <!--<goal>exec</goal>-->
            <!--</goals>-->
            <!--<configuration>-->
            <!--<executable>-->
            <!--${env.JAVA_HOME}/bin/javapackager-->
            <!--</executable>-->
            <!--<arguments>-->
            <!--<argument>-deploy</argument>-->
            <!--<argument>-native</argument>-->
            <!--<argument>exe</argument>-->
            <!--<argument>-name</argument>-->
            <!--<argument>${project.artifactId}</argument>-->
            <!--<argument>-appclass</argument>-->
            <!--<argument>${mainClass}</argument>-->
            <!--<argument>-srcfiles</argument>-->
            <!--<argument>${project.build.directory}/CaseyIDE/target/CaseyIDE.jar</argument>-->
            <!--<argument>-outdir</argument>-->
            <!--<argument>./target</argument>-->
            <!--<argument>-outfile</argument>-->
            <!--<argument>${project.artifactId}-app</argument>-->
            <!--<argument>-v</argument>-->
            <!--</arguments>-->
            <!--</configuration>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->
            <!-- For setting the project version number in a properties file to keep it all iin this pom file -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>jar</nonFilteredFileExtension>
                        <nonFilteredFileExtension>svg</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/CaseyIDE/src/main/resources/sharknoon/casey/ide
                            </outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/CaseyCOMPILER/target/</directory>
                                    <filtering>true</filtering>
                                    <includes>CaseyCOMPILER.jar</includes>
                                </resource>
                                <resource>
                                    <directory>${basedir}/CaseyUPDATER/target/</directory>
                                    <filtering>true</filtering>
                                    <includes>CaseyUPDATER.jar</includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
